[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "voxelize"
]

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
pathfinding = "4.9.1"
hashbrown = { version = "0.14.3", features = ["serde"] }
kdtree = "0.7.0"
log = "0.4.21"
nanoid = "0.4.0"
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
specs = { version = "0.20.0", features = ["specs-derive", "serde"] }
rand = "0.8.5"
voxelize = { path = "voxelize" }  # Reference the local submodule

[profile.release]
opt-level = 3
